--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.7",
+    "@tailwindcss/postcss": "^4.0.4",
+    "motion": "^12.4.1",
     "next": "15.1.6",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
