--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "libro-click-frontend",
   "version": "0.1.0",
   "private": true,
+  "cache": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
