--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.7",
+    "@next/third-parties": "^15.1.7",
     "@tailwindcss/postcss": "^4.0.4",
     "motion": "^12.4.1",
     "next": "15.1.6",
